[gd_scene load_steps=4 format=2]

[ext_resource path="res://Common/Behaviors/Vision.gd" type="Script" id=1]
[ext_resource path="res://Common/Behaviors/AutoFollow.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 640.0

[node name="AutoFollow" type="Node2D"]
script = ExtResource( 2 )

[node name="Vision" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 640, 0 )
collision_mask = 40
script = ExtResource( 1 )

[node name="FieldOfView" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldOfView"]
shape = SubResource( 1 )

[connection signal="target_found" from="Vision" to="." method="_on_Vision_target_found"]
[connection signal="target_lost" from="Vision" to="." method="_on_Vision_target_lost"]
[connection signal="body_entered" from="FieldOfView" to="Vision" method="_on_FieldOfView_body_entered"]
[connection signal="body_exited" from="FieldOfView" to="Vision" method="_on_FieldOfView_body_exited"]
